finalized the api doc and added the admin api
